# Lcnc-test-qt6

./: CMakeLists.txt  Lcnc-Qt6.pro  Makefile  README.md  WLED.cpp  WLED.h  get_command.h  hal_priv_h.old  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  send_command.h  ui_mainwindow.h
WLED-project/: WLED.cpp  WLED.h  WLEDPlugin.cpp  WLEDPlugin.h  wapp.ui  wled-designer-plugin.pro  wledGallery.ui  wmultiFlash.ui
